<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/dialog_bg">

        <ImageView
            android:id="@+id/iv_personal_face"
            android:layout_width="@dimen/length_404"
            android:layout_height="@dimen/length_215"
            android:layout_marginLeft="@dimen/length_20"
            android:layout_marginRight="@dimen/length_20"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/length_20"
            android:src="@mipmap/personal_face" />

        <TextView
            android:id="@+id/tv_face_details"
            android:layout_below="@id/iv_personal_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/face_details"
            android:textColor="@color/center_grey"
            />
        <TextView
            android:id="@+id/tv_face_introduce"
            android:layout_below="@+id/tv_face_details"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:textColor="@color/light_grey"
            android:text="@string/face_prompt"
            />
        <LinearLayout
            android:id="@+id/ll_face_error"
            android:layout_below="@+id/tv_face_introduce"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/length_20"
            android:layout_marginRight="@dimen/length_20"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/iv_face_error_one"
                    android:layout_width="@dimen/length_128"
                    android:layout_height="@dimen/length_148"
                    android:src="@mipmap/face_error_one"
                    />
                <TextView
                    android:layout_below="@+id/iv_face_error_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="@color/light_grey"
                    android:text="@string/face_nearly"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/length_10"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/iv_face_error_two"
                    android:layout_width="@dimen/length_128"
                    android:layout_height="@dimen/length_148"
                    android:src="@mipmap/face_error_two"
                    />
                <TextView
                    android:layout_below="@+id/iv_face_error_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="@color/light_grey"
                    android:text="@string/face_far"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/length_10"
                >
                <ImageView
                    android:id="@+id/iv_face_error_three"
                    android:layout_width="@dimen/length_128"
                    android:layout_height="@dimen/length_148"
                    android:src="@mipmap/face_error_three"
                    />
                <TextView
                    android:layout_below="@+id/iv_face_error_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="@color/light_grey"
                    android:text="@string/light_bright"
                    />
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/bt_face_sure"
            android:layout_below="@+id/ll_face_error"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/length_10"
            android:layout_marginBottom="@dimen/length_20"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/length_20"
            android:layout_marginRight="@dimen/length_20"
            android:text="@string/sure"
            android:textAllCaps="false"
            android:textSize="@dimen/size_16"
            android:textColor="@color/white"
            android:background="@drawable/send_again_style"
            />
    </RelativeLayout>
</RelativeLayout>
